update application
